<resources>
    <string name="app_name">Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete Hillfort</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="menu_markVisited">Visited</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Add image(s) (up to 4)</string>
    <string name="change_hillfort_4_images">Tap individual images to update</string>
    <string name="too_many_images">Can\'t add more than 4 images!</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_hillfort_maps">Hillforts Map</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hint_userEmail">Email</string>
    <string name="hint_userPassword">Password </string>
    <string name="hint_userName">User Name </string>
    <string name="enter_email_password"> Please enter a valid email address/password </string>
    <string name="enter_user_email_password"> Please enter a user name and valid email address/password </string>
    <string name="no_account">No account? </string>
    <string name="create_account_2">Create one! </string>
    <string name="already_registered">Already registered? </string>
    <string name="login">Log in! </string>
    <string name="user_exists">User with that email address already exists! </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_userName">User Name </string>
    <string name="settings_email">Email address </string>
    <string name="settings_password">Password </string>
    <string name="settings_buttonUpdate">Update </string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!--END Firebase Resources-->
</resources>