<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_user"
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_save"
        android:title="@string/menu_savePlacemark"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelHillfort"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_mark_visited"
        android:title="@string/menu_markVisited"
        app:showAsAction="never"
        android:checkable="true" />

    <item
        android:id="@+id/item_mark_favorite"
        android:title="@string/menu_markFavorite"
        app:showAsAction="never"
        android:checkable="true" />

    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_deleteHillfort"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never"/>
</menu>