<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.settings.SettingsView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <TextView-->
<!--                    android:id="@+id/settingsUserName"-->
<!--                    android:layout_width="243dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="0dp"-->
<!--                    android:gravity="center"-->
<!--                    android:padding="15dp"-->
<!--                    android:text="@string/settings_userName"-->
<!--                    android:textAlignment="textStart"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="15dp"-->
<!--                    android:textStyle="bold"-->
<!--                    tools:ignore="RtlCompat" />-->

<!--                <EditText-->
<!--                    android:id="@+id/userName"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="8dp"-->
<!--                    android:hint="@string/hint_userName"-->
<!--                    android:inputType="text"-->
<!--                    android:maxLength="25"-->
<!--                    android:maxLines="1"-->
<!--                    android:padding="8dp"-->
<!--                    android:textColor="@color/colorPrimaryDark"-->
<!--                    android:textSize="14sp" />-->

                <TextView
                    android:id="@+id/settingsEmail"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/settings_email"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_userEmail"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/settingsPassword"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/settings_password"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_userPassword"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/settings_buttonUpdate"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="196dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="100dp" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/statsHillfortsNum"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:gravity="center"
            android:padding="15dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/statsHillfortsVisited"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:gravity="right"
            android:padding="15dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            android:layout_toEndOf="@+id/statsHillfortsNum"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>